--- a/cs231-psets/pset2/FullyConnectedNets.ipynb
+++ b/cs231-psets/pset2/FullyConnectedNets.ipynb
@@ -543,86 +543,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Iteration 1 / 4900) loss: 2.348243\n",
-      "(Epoch 0 / 10) train acc: 0.151000; val_acc: 0.176000\n",
-      "(Iteration 101 / 4900) loss: 1.935606\n",
-      "(Iteration 201 / 4900) loss: 1.738956\n",
-      "(Iteration 301 / 4900) loss: 1.752466\n",
-      "(Iteration 401 / 4900) loss: 1.518155\n",
-      "(Epoch 1 / 10) train acc: 0.452000; val_acc: 0.455000\n",
-      "(Iteration 501 / 4900) loss: 1.544404\n",
-      "(Iteration 601 / 4900) loss: 1.729041\n",
-      "(Iteration 701 / 4900) loss: 1.468784\n",
-      "(Iteration 801 / 4900) loss: 1.518385\n",
-      "(Iteration 901 / 4900) loss: 1.596196\n",
-      "(Epoch 2 / 10) train acc: 0.468000; val_acc: 0.465000\n",
-      "(Iteration 1001 / 4900) loss: 1.603010\n",
-      "(Iteration 1101 / 4900) loss: 1.511131\n",
-      "(Iteration 1201 / 4900) loss: 1.390768\n",
-      "(Iteration 1301 / 4900) loss: 1.416758\n",
-      "(Iteration 1401 / 4900) loss: 1.469447\n",
-      "(Epoch 3 / 10) train acc: 0.469000; val_acc: 0.465000\n",
-      "(Iteration 1501 / 4900) loss: 1.494585\n",
-      "(Iteration 1601 / 4900) loss: 1.528552\n",
-      "(Iteration 1701 / 4900) loss: 1.475370\n",
-      "(Iteration 1801 / 4900) loss: 1.351970\n",
-      "(Iteration 1901 / 4900) loss: 1.446044\n",
-      "(Epoch 4 / 10) train acc: 0.500000; val_acc: 0.486000\n",
-      "(Iteration 2001 / 4900) loss: 1.445344\n",
-      "(Iteration 2101 / 4900) loss: 1.516174\n",
-      "(Iteration 2201 / 4900) loss: 1.345852\n",
-      "(Iteration 2301 / 4900) loss: 1.404518\n",
-      "(Iteration 2401 / 4900) loss: 1.327759\n",
-      "(Epoch 5 / 10) train acc: 0.532000; val_acc: 0.482000\n",
-      "(Iteration 2501 / 4900) loss: 1.344892\n",
-      "(Iteration 2601 / 4900) loss: 1.278614\n",
-      "(Iteration 2701 / 4900) loss: 1.325554\n",
-      "(Iteration 2801 / 4900) loss: 1.469198\n",
-      "(Iteration 2901 / 4900) loss: 1.504363\n",
-      "(Epoch 6 / 10) train acc: 0.540000; val_acc: 0.507000\n",
-      "(Iteration 3001 / 4900) loss: 1.516203\n",
-      "(Iteration 3101 / 4900) loss: 1.432121\n",
-      "(Iteration 3201 / 4900) loss: 1.378774\n",
-      "(Iteration 3301 / 4900) loss: 1.567494\n",
-      "(Iteration 3401 / 4900) loss: 1.409685\n",
-      "(Epoch 7 / 10) train acc: 0.574000; val_acc: 0.514000\n",
-      "(Iteration 3501 / 4900) loss: 1.482005\n",
-      "(Iteration 3601 / 4900) loss: 1.363713\n",
-      "(Iteration 3701 / 4900) loss: 1.458190\n",
-      "(Iteration 3801 / 4900) loss: 1.501849\n",
-      "(Iteration 3901 / 4900) loss: 1.550113\n",
-      "(Epoch 8 / 10) train acc: 0.574000; val_acc: 0.499000\n",
-      "(Iteration 4001 / 4900) loss: 1.285045\n",
-      "(Iteration 4101 / 4900) loss: 1.305953\n",
-      "(Iteration 4201 / 4900) loss: 1.381854\n",
-      "(Iteration 4301 / 4900) loss: 1.245160\n",
-      "(Iteration 4401 / 4900) loss: 1.301376\n",
-      "(Epoch 9 / 10) train acc: 0.611000; val_acc: 0.513000\n",
-      "(Iteration 4501 / 4900) loss: 1.378058\n",
-      "(Iteration 4601 / 4900) loss: 1.143471\n",
-      "(Iteration 4701 / 4900) loss: 1.211005\n",
-      "(Iteration 4801 / 4900) loss: 1.228005\n",
-      "(Epoch 10 / 10) train acc: 0.579000; val_acc: 0.512000\n"
+      "(Iteration 1 / 1470) loss: 2.347269\n",
+      "(Epoch 0 / 3) train acc: 0.184000; val_acc: 0.171000\n",
+      "(Iteration 101 / 1470) loss: 1.847332\n",
+      "(Iteration 201 / 1470) loss: 1.729023\n",
+      "(Iteration 301 / 1470) loss: 1.625162\n",
+      "(Iteration 401 / 1470) loss: 1.616600\n",
+      "(Epoch 1 / 3) train acc: 0.453000; val_acc: 0.457000\n",
+      "(Iteration 501 / 1470) loss: 1.552762\n",
+      "(Iteration 601 / 1470) loss: 1.540712\n",
+      "(Iteration 701 / 1470) loss: 1.496181\n",
+      "(Iteration 801 / 1470) loss: 1.291873\n",
+      "(Iteration 901 / 1470) loss: 1.396239\n",
+      "(Epoch 2 / 3) train acc: 0.487000; val_acc: 0.460000\n",
+      "(Iteration 1001 / 1470) loss: 1.645196\n",
+      "(Iteration 1101 / 1470) loss: 1.499408\n",
+      "(Iteration 1201 / 1470) loss: 1.444396\n",
+      "(Iteration 1301 / 1470) loss: 1.531054\n",
+      "(Iteration 1401 / 1470) loss: 1.432117\n",
+      "(Epoch 3 / 3) train acc: 0.529000; val_acc: 0.476000\n",
+      "(Iteration 1 / 1470) loss: 1.680409\n",
+      "(Epoch 0 / 3) train acc: 0.498000; val_acc: 0.481000\n",
+      "(Iteration 101 / 1470) loss: 1.365498\n",
+      "(Iteration 201 / 1470) loss: 1.315581\n",
+      "(Iteration 301 / 1470) loss: 1.303679\n",
+      "(Iteration 401 / 1470) loss: 1.302954\n",
+      "(Epoch 1 / 3) train acc: 0.548000; val_acc: 0.504000\n",
+      "(Iteration 501 / 1470) loss: 1.344378\n",
+      "(Iteration 601 / 1470) loss: 1.459290\n",
+      "(Iteration 701 / 1470) loss: 1.380037\n",
+      "(Iteration 801 / 1470) loss: 1.484695\n",
+      "(Iteration 901 / 1470) loss: 1.422995\n",
+      "(Epoch 2 / 3) train acc: 0.542000; val_acc: 0.495000\n",
+      "(Iteration 1001 / 1470) loss: 1.297910\n",
+      "(Iteration 1101 / 1470) loss: 1.304082\n",
+      "(Iteration 1201 / 1470) loss: 1.435295\n",
+      "(Iteration 1301 / 1470) loss: 1.333987\n",
+      "(Iteration 1401 / 1470) loss: 1.305142\n",
+      "(Epoch 3 / 3) train acc: 0.580000; val_acc: 0.504000\n"
      ]
     }
    ],
    "source": [
     "model = TwoLayerNet(reg=.3)\n",
     "solver = Solver(model, data, optim_config={'learning_rate': 1e-3}, \n",
-    "                lr_decay=0.95, print_every=100)\n",
+    "                num_epochs=3, lr_decay=0.95, print_every=100)\n",
     "\n",
     "##############################################################################\n",
     "# TODO: Use a Solver instance to train a TwoLayerNet that achieves at least  #\n",
     "# 50% accuracy on the validation set.                                        #\n",
     "##############################################################################\n",
-    "solver.train()\n",
+    "for lr in [1e-3, 1e-4]:\n",
+    "    solver.optim_config['learning_rate'] = 1e-4\n",
+    "    solver.train()\n",
     "##############################################################################\n",
     "#                             END OF YOUR CODE                               #\n",
     "##############################################################################"
