--- a/cs231-psets/pset2/ConvolutionalNetworks.ipynb
+++ b/cs231-psets/pset2/ConvolutionalNetworks.ipynb
@@ -862,9 +862,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAATUAAAEyCAYAAACbGke8AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xlw5Ged3/Gn7271IbXUOkbn3DPyMSPP2AZjB2ygYO2F\nsEBibidFIBQh+8cGEqpSIUuSWqq8kIKQ2l1gCbCEWkOxZIODMY5tbDy28dhzeMaee0bHSKNbrZZa\n6vvIH/sXft4/VlMbemsfPq8/P36s/vWhr37V3/k+j6/ZbBoREVf4/74vQETk/ycVNRFxioqaiDhF\nRU1EnKKiJiJOUVETEaeoqImIU1TURMQpKmoi4pRgKx/soa8ex/GF8Poyrj8YzVvZXGUW19410o35\nc40ZzKMmh/ltD3zByg696Se4Nt03gPneLn5Z93RftrLw3DquvTrxfzCvZPm6v3L8Ccz/+5e+YWX3\nvPn1uHamYr/exhhz5NEjmD917DTm1WrZylJ9nbj2ye/+OeZnen4f80xlw8qSjUVcG2yPYb6abWC+\nkejBfCUQsbLbZ/8brv3zzz2I+ZEX+bUqFauYJ+L9Vta3cwTX7j7In8OCr4T5v/74A1b2uc9+FNdO\nbGJsThV7MfdF45jvSNq/+q8L1HHtriC/n/d//k98fDW/SndqIuIUFTURcYqKmog4RUVNRJyioiYi\nTmlp97OxsIB5eIrXn7ghY2WVVbsTZYwxw7dc45+d5/bNjH/r+8jNLdgdN2OMyQzztSS2dWDek7Kz\n3PyLuLZSCmPeH7y+t+y5I8etLOLnDtXtb7kV84982O6WGWPM0M7nMP/hz+x84iJ3tLxE8/x+xnxz\nVhYq2d1WY4wJNAOYRzb5vfd5dFHXm/x+4s/w+Fhll+zOtzHGrK9xQ2/bcNLKenf04drhPYcxvzJ/\nhi8GLKRHMZ/v5E7xUoH/tUGtyJ/bYs3u8qYb3MnPGn7M+zG16U5NRJyioiYiTlFRExGnqKiJiFNU\n1ETEKS3tfq53XMF8sspdp8Gc3dUK+bnjuJ7jGbqN1SLmZxrzmJPNTb6+ZphbXZ0D7Zhn2u1OV3OF\n/674f3EV8/UUd/q8bM7ZHef/9T++i2uXs9OY//P33Yf5O996G+ZRY8/0PfX8MVw7/gLGph6qYF7x\n2R/ZSHIN1wYNf1aaZZ45bAY9WpchuxNpeKzS1Kvc4V+4egnzhr8N83gIZj97uOPY080zq7OLHv+s\nABR6BjFvVrlEdPftxbya4M56F/weBur8WgXKPN+9VbpTExGnqKiJiFNU1ETEKSpqIuKUljYKprL8\nZX4uy+Mf/WH7C/r1Df6ivDzIX+bPGP7ytyO09UbBeo7HpHoSPOLSG+MvojsH7Y315k9wU6FR5Lwn\nuYS5l5sO77KyH37nEVx77avcQEhsFjB/38d4cOVd97zByg7s3YNr/+LrX8L8QtMekTPGmK6K/ZpH\nA/wxjnnMLC1V+HNYi/JGlisN/vKb+Fd5o82NbBbzWILvKyJJe6auv4ubCunOBObhFK8n42Veuwgb\nZBpjzHIzhHm8yj+nHoxaWVuZRxiz/r9bWdKdmog4RUVNRJyioiYiTlFRExGnqKiJiFNa2v3sWLE7\nccYY88YGjwRdG7a7VI0Ad3ryGe4KZi/xEXnlCHejSFuZR62iDR7lCftrmHds2OM8gSb/XSmGeYPD\n1QrnXt79wXdY2cxVe6NFY4x57JGfYf71r34Z86rHpoof/tj7rOyWPfu8LhH9MsXHvrXH7K5oOsyb\nDbb5uDu90c7d6Y0Gd5zXwrBJJD+k2ajzz45wE9EkY3yMX3vYvpZg1O4gGmNMscafw3Jl6xuhLtW4\nw11o8oaNOT+Ppm0s82e/UYe5sgj/q4KuRY8ZtC3SnZqIOEVFTUScoqImIk5RURMRp6ioiYhTWtr9\nnG1fxbwW445JX8Tu9PUVeGbz8kmeuVttW8Y8++qrmJP0INf+eDs/Zn2Tr3E5DN24dp5D3Lmfu3+Z\n62wMRdrs7tpHPvshXLvvNp63fPz7D2P+gx8+ivlLp8et7I1vvdPrEtGZ1BDmqQDMfsZ4s8GYj1/b\nSoPft1osjfn8dfztL5TWMe9I8gaP2zK8wWPSbz/PjRzPStau8vMvLq1gTsZ2bcN8NcTXnS7wdbcl\n+DO03rD/tcGhMh+DmPDxvzbYKt2piYhTVNRExCkqaiLiFBU1EXGKipqIOKWl3c/RUe6wDDR5Rq1W\ntLuI4X7uAI1GuRsT93EncvoWnqMz37Pbiwc8ZgX3x/lvws4Yz7TF6vb6jgh3hEvDvMNv88r17Xz7\n4snLVnbbm27AtZ/41Mcxf/3YGOY/evTnmB998ZSVnf3O//a6RPRKEo6lM8ZkovacYzDOO9aGS/w+\nREL83q+l+THz13EqYaXmcaRchj/7/Tu4uxiFXWs3F/mzUm7n5xNLhjEnE7+4gHmznzuo51f596q3\ng7ufIZ/9Lxw2/DxA2/TYJXirdKcmIk5RURMRp6ioiYhTVNRExCm+pseX9L+RB/N5nFkmIvK3aDab\nvOvna+hOTUScoqImIk5RURMRp6ioiYhTVNRExCktHZP6wuvvwnxPH49zbOvss7LhITiuzBjTu403\nVQzXeDzlkctXMH/HV/7Iysa+9R1cu7lxFvOZN3ts2pc8ZGU3dd+Ga4MlHvu6J8/P/8sjPJ7y3t3/\nysqurPGY1PImHz84WObj0w4O82Z+/Z1PW9m2yHFc+y+fn8X86i8ew/yx51+xsr/u580g5yq86ePJ\nFyYx/2c1PvZtbKd9jX/whz/GtZ8f4wZ/Jsibks7z6ZAm7rff/0xoCtf2j45ifvPl05gPj9sbdj7w\nzT/AtftC/JrUh/mzMt3Jm7KGtvdb2evm9+Panbv587ZVulMTEaeoqImIU1TURMQpKmoi4hQVNRFx\nSku7n8U6b7bYPbQH85Fu+4i8RLt95Jsxxpw9zcdtHT9zEvOnLs9hTg7n9mF+7c5jmFdubMf83p/3\nWtlmiM+8G509gvk947+L+ZcxNabYsLuilQAfSRjeNoJ5Js1/+wIh7iDHQ7vttbWXPK6QFaa4s1rr\nilhZqhDHtZNVj01Jt9s/wxhjqsGLmMcMvZ/c/dxRexLz7MIk5rnSWzHPV+yNEhcaIf7ZpWnMGwHe\nyJEMz/PnMDDAvz/dxfswX681MO961u6KxkbsDUyNMeZq7WbMzRb3vNSdmog4RUVNRJyioiYiTlFR\nExGnqKiJiFNa2v1sP8RdxGKGjzibWLK7dMXLPFd57Fwe85cneRYv1zGEOfENP4P54ZM7MH/bVT5u\n7EKb3Um6IXsjP+jcGYwnlq/v79AlOFEw1rcX12Y6uWubTvOcX7TE3exy1e50XuaRQE/NMneW40G7\no5mP7sK1HYv8Gs4l+DWsrnLH9Uhs653yNY8Zz0KCf3Zlgz9b5Yw9Kxmq8/Mpt3G3cL02iTnZUec3\nKB/biXkx9BzmbSv8+3lhh91ZzzT4uMf8Ge6Kmls+yPlr6E5NRJyioiYiTlFRExGnqKiJiFNU1ETE\nKS3tfnbv5p1IA20pzPM1u3M5t85dzlwPP5V4kuf8EiPcuTSXvm9FY+fsGVRjjInu59nCasGefTTG\nmOGZVSsbvMq7fB64xs+ntsldNC/L/Yet7NYkz9pGuriLGG3wcYvrhndijc3bz6k2w/OmXsYvJTFf\n3DVhZZkBnls8Pcy7BG8/zx3xzjJ3+naUtn7t5YVxzGM5ft/SjTbMZ2bKVrYS5S50Z3wd81kfz8Ti\ndQzwTstDm3zf81yA/8WCr5t3YA5s2l3hSg/vfNu7fH2f8dfSnZqIOEVFTUScoqImIk5RURMRp7S0\nUTB4N28st3iZv4i9ctEelzi36DH2VOIvXAMD3ZinA/ylKzk1xhv53djLoyWDCzzi0x62mxz957hR\ncLqXmxAj+dsx9xKr2cfHVfujuDZatRsZxhhzeZGbM80cHxFopu0j5SLr9qaHv06hdwbzYNL+Qrta\n4GP2bu23N+U0xpiFIbt5YowxI2YR8/yS/aW9l84xHh1bX+H307fIGz9G4va1hxP8/mwf9RhjM7xh\no/kOrJ2axKXne7jZEPNVMJ+Y49Gn9Yz9fK6t8fmA54a6MN/akJTu1ETEMSpqIuIUFTURcYqKmog4\nRUVNRJzS0u7nw89OYv70o6cwn7pod8yCYe7obN/Bo0mxEI/btHXzUXvkwSx3rrIRPoLsyPhtmO84\naB97d/Ekd21/5yx3/0o/9joMj40N2BscJpKv4NpkjbuivT7e+K8S5k5XR8zuxo01uYv2J8e4szoe\n5PG2YsoeqYtCZ80YY2I38ce7uc5dxEpiDfO1wtZ3uMwM22NcxhiTjPHGocGBUcybeXvcaqOfz4ib\nMDzGlujkxyTpHrtLbowx/XV+rU6082hj/SA//20Fu6NZ9fM4VGYvjyVule7URMQpKmoi4hQVNRFx\nioqaiDhFRU1EnNLS7uf/fOinmGeXeJO7rn77WK2Dh2/CtaPb+di3ADf0TDnKXR2yepDzybPcFbu3\nZh8RZ4wxR4/Yc4F+2DzPGGP+uMzH1d3tz/HFeOjrtc/I8wX4unOTvOmjv8RzfuHKFczTmeP2Yy7y\njKuX7ZlrmEeLdsfsyiu8YWFh8BbMc9N85N1qk2c/e6/w55OEMvz+hMI8g5wKD3DeZ6/v6ONO8Y4A\ndyJ3bXAH+Q8hC2a589sbmMR8pMkd5+QUz+GeD9g/f+8e/pcMO5d5o03D+09adKcmIk5RURMRp6io\niYhTVNRExCkqaiLiFF+zyTvJ/kYezOdr3YOJiFOazSYPub6G7tRExCkqaiLiFBU1EXGKipqIOEVF\nTUSc0tLZz0/d/xnMw0U+V3GubOf5Js+L9aR4Z9WURz6SGcL833zxk1b20Gd4VvKC4fMJ69UzmJdz\n9rxpopcbOoOBPszDDd799MMPDmP+nm++YGVTr/B8Yj57DvMBXz/mB3bxMF570t75N9TgHX4/9xn+\nCL73iTdh3pa0ZyKPXtqBa3dt45nIqalpzA9f5TM4Y0X7ffvGg3+Ja7/79Lcw3z/Ln6FgN+9OWzi/\n08pW13heOe1LY/5Kjt+fT37xE1b2zbEVXBvK88zuapPziQbvKO0P2u+zf5RndsMZnlndKt2piYhT\nVNRExCkqaiLiFBU1EXFKSxsF8SB/yZ9I1TBPpeyN6IJNPsor3subKnY2+ClWEvxzyMJlznNFPsau\nsslH0DVC9peoJR8fD5gKHca8s+P6Nok8ea7Dypor/Jqk4rwbZlt3D+ahJDcz5n32sYSpKd6Y0csr\nBf57+6b2Y1ZW8vMRfrEEbxzaFeEj2Pwd/HNS9kmNnnyn+Ni3C/3cKOn3cyNrdY+9oWhpjptbi0E+\nwjHcx8+HbPf4vSon+Xd2dZObFn6PoxDnoIEQW+P3OBLherDVcqU7NRFxioqaiDhFRU1EnKKiJiJO\nUVETEae0tPuZqPIRZI0Gj1xk0va4hC+ewLUxU8I8l+NOSn7Jq8NiOxfiUZaFOneXulI8JlUP2ef1\n9Zb5KLiVEB811lHkMSkvQ9P2MXaJhN0RNcaYgQy/hl11Pj4tk+Vxo1TWHjeqb254XSJKm3nM5+p2\nZ3UtwN2/hSq/toEEj+VFwzxuVFjb+thOX+IuzOMNPvatFuMxudSAPSblv7od1za2TfLPWLgZcxR4\nGeONIndFPU6eNNEGjz6lknYLudjGx+yFCl4/ncfeXkt3aiLiFBU1EXGKipqIOEVFTUScoqImIk5p\naffzfe+/F/NkiDez23bQ7mpNeTQtiyvcoVs4xTNq81PcXSSnXnwE81q3PZ9njDHLKe4YdbbDJozV\ndVwbT/Asa0eWZwu9vKHLnjlMd/CLmAzy8wmHpjBPZbmbPZGFzTCrW5+1NcYY30G7y2mMMf5hu/s9\nEuDrq3TZHURjjFnP88zuQGwJ844gb3xIHj7KndKD/VcxT85xxzUVtV/b5RJ3p32neU54cYA7yKRn\njj9XqQJvHhmNc+eyFOTOZbVq//xAmTu/mTavmVV1P0Xkt5CKmog4RUVNRJyioiYiTlFRExGntLT7\neSk0gHm5wN246uN2h/LyFY+OTp67NPV1nitdW916Z2g8Nol5uMYdvSF/HvPNqL2LqC/IXduNLr5u\n/8D1dREP7H/CynqXuEO12ORr6WxwVzA3zfOM4RV7d95UhI+f8/LqJX5/BlN29/N80D42zxhjdgd5\nF9YNj2MTfXnO13u2/rff38473JY3Kphv9vLRhh1Be0fkG67xTr4z7bzTcnyTZ2JJvsrzzSGPZrs/\nwl3eVJo/E8GmvT4ZOM0/vGbPK/+NPR75r9Kdmog4RUVNRJyioiYiTlFRExGnqKiJiFNa2v380jd/\ngvnSFe6uzZ25aGWVCO+g2h7mpzLcxx3Xzm28QyfZqPOZlckkd7TyBZ7RK0KTtxY8jmtr1TswD9Un\nMfcSD9szpPURnrkbXuM52QvrPPtY3Ma78F4N91tZaZrP2vTStp13p+0N2B3KlSG+jnQnf1Z2Nfla\ngmd5DjcziDEqfJHP5jxxaAfmB8b5s38uaT9ob4PnlTde5a5gppf/RQCZbXDH0TfIs6nNCO+e3Ozi\nf8lQgmsPN/h9C3RyF36rdKcmIk5RURMRp6ioiYhTVNRExCktbRT4s03MB7p4Q8Cet41aWdsAb57Y\nH+Mvs9t7+zAPNvhL5EeesbPD+/lLUePnnxHu4i+5fUP2F/FdCW5YRDr4+dwU5SMCHzK8YWNi8GdW\n1ljkRkGlCk/eGDNi+MvicIofM1W016dHru/L39gMP8/VRfvYu00fv8czQ9zgmczZY1zGGHN/H78X\nu+d4fIqcODyJ+VCDN+BsGtg41BhTmbOf09Id/LmqdvJY3rV6D+akln0M8742bnAs9UxgnirwNXaX\n7UbBZh9/JoKz/LON+bce+a/SnZqIOEVFTUScoqImIk5RURMRp6ioiYhTfM0mdyR/Iw/m87XuwUTE\nKc1mk9v2r6E7NRFxioqaiDhFRU1EnKKiJiJOUVETEae0dPbzX3z6Y5hHDc9QxhL2cWPtaT6aqz3C\nc261Jm/YuLDMGzw++B+/bGVPPf1TXHtinDcVfOnJo5h3bNozhO97y224tuLn614K8pzfhz/Br+1/\n+sQfWdnVHM9EXpzmGc9IkucWh7p4s8UxuPah6Caufc83/xTzT3/lA5j39dvHviV6RnDt0tw05tFu\n3sixLcLXODtjzyh+4QMP4trP/5fzmGdP8wxlZoA3VVwo25/9euUIru0p82c/fwcf1/flT9nH8n37\nB4/g2huGFjCPZ/nzOdrgM/We37TnuBOGN73MVg5jvlW6UxMRp6ioiYhTVNRExCkqaiLiFBU1EXFK\nS7ufv3f3rZgP9EUx7x+2j7frTfOOqF5TYeMXudP3/FOn+X8APTu4KzjQCGH+w9wM5sFpu9N17z17\ncW28k48PS/iv7y3LBu2O61KjF9cu9/DzicUbmPvqPMqbCthd0WqNu3xerkzx7qcH33azlQXLvBvy\nsWePYT4a452MCw3etXV2sYA5yRru/q177ExcuLaMeSVsP+bIJnciKwk+3u5Q8SrmxF+Zx/yVWX5t\nd5Z4N+DEMB/51zZh/4Iu9fHnrdnN17JVulMTEaeoqImIU1TURMQpKmoi4pSWNgpOP/ws5hPt/EV0\nrKPbyioFPlYrO8fHnl27bB9LZ4wxV1Y4J51tfITfviE+xi5e467Fpcv281/NejRPRriBkG7jpoqX\nE7P2l8uXVngcaB5Gc4wxxoS4IZCp8Rfo6xF7rOpyjEfKvHQO2uNQxhhzcNcbrOwXx3gc6tlXxjEf\nHbsd81sO8ShTtcTH2JHSLv6iPN3Pr2F5g8f19qzZjZXaHDcy0in+ndjs2fpnZf0Avz+jc9wkG9xt\nH1VojDGpQArzkQP27/hkuAvXLkX5qMKt0p2aiDhFRU1EnKKiJiJOUVETEaeoqImIU1ra/ZxY5s5Q\nbYI3G5yfvmxl0zM8KlLc5I0mE712B9UYYyLxrXdYKmHuCnbu5g0rR/buxvylx35pZVPzU7i2d5XH\nwboS19cZuuHd77ey3XGPrlOIH7NY5a5bW5E7Zt0b9ntUn+NOpPnZ9zDePrIL85rPvpaLR7mrfuEY\ndy1X3m5/rowxJtXFHedCnj9zJFLmEbnJJX7MfR4bcFaM/ZjrIzw6txacxHywjceQyNVjK5iXuvg9\njp/nz8rFXbx5ZG/aHuWqneTPoW8XjzYaw13r19Kdmog4RUVNRJyioiYiTlFRExGnqKiJiFNa2v0c\n3ncP5qubfOzbos/eLC6a4uPQ+mI855bs5hnCtig/9ZfGn7eyQoE7QB3BQcwPHNqD+Zkb7aPZ8lWe\nw8wWea6yM9SHuZdLq/aMa1uYZ1mna9yFTia5g5zn/RCxE13PcbfMS3mBN3JcHrdnKHtSh3DtQPAJ\nzIcS+zHvb/LzDFd4o0Sy4uej5hoV7ogHVnhOeGX/y1Y2MJnhB01zBzW3neczyY9PXsL8HWHe3PPb\nTe6s+vlX2QzP2J+tqfoYru3c4Ot+3T/in21dw9aWiYj8w6CiJiJOUVETEaeoqImIU1TURMQpLe1+\n/vwUzznmy7wraLFp75bp6+buXz3NO26WgjyfWfHxjBqZvMKzf/3DPLuWSnEXbe+em6wsFuKu7dIc\nvybtKT5Szcv0iZ9aWSPCjznR5NcwGOGuW8pjtHB7wO7oRZtb78QZY4zZ4B9+7syslSXL3HLrT/JR\ngMV17ma/etb+2cYYk1vY+uxnd4c932uMMaUl/lVr7DiO+Z7z9oxvPugx+5mdxDx/aeu/3hfrRzH/\nSQd/JsaWeQb5wAneKffcpr3Db9RcwLXrJZ413irdqYmIU1TURMQpKmoi4hQVNRFxioqaiDilpd3P\nqSzvfBto58uI+ewOS/cwdxY7O3l32kiTOyn1gscZl6CwyrV/I8ldtw6PedOb77Jn3doqfGZjeYO7\nsxNLfL6pl7u32R3ASpg7i+0eTb71Ep9NWeexVdOWsOdWQ5vchfZS83iaa1P2g/YP9OPaf/Lu38E8\nVOK50uPP2XO/xhgT8HHXkdTL3EFtmicxvzbJM7Gr8TNWFqryPHDOVDGvNbmDTt6zj3f9LUb5vd/b\nw/nANHe5wzV7HjjYw3OvB6MXMd8q3amJiFNU1ETEKSpqIuIUFTURcYqveR1fJv6dH8zna92DiYhT\nms0mdxZeQ3dqIuIUFTURcYqKmog4RUVNRJyioiYiTmnpmNTH73sA87VlHv942xtus7K3v/11uHZg\niDcy/Ku/eg7z7z3xNOYPP/uQlX3ue5/EtcN9/JjBLm7SVLL2CMnKBp8zt3DFHpMxxphybQXzr/27\nGcyfefoD9vVd5RmkF3M3Yp7bsx3zle/uwLy+GrOyK/OjuPaxl3mkLPX2t2D+xiH7+Zc9NtpMxgYw\nH1rlzQlvn+INOMuX7KMaPzqNS813v/FpzNu7+FjCXI3/QUC1YR/L14jyWJ5/mkcB/UV+nz/62T+1\nsq9/6ju4dvbkJF9fwH5NjDHm7n4e+zp0gz2uN7XGv/cnQ3HMt0p3aiLiFBU1EXGKipqIOEVFTUSc\noqImIk5paffznnvvwPy/PviXmP/x175tZa+Oc1fw9z/2Iczvuo87esEU73BI3c++vh5c2xYPYL60\nyF2qC6+et7L1ah3XxprcFR3cxR09Y7j7ee55+5jBRjcfHdeZ467txBPcXVz3cacrn4RNGMPcKTYv\nc/zmnbzx4w3bX29lq3XuxHVwo9hEr3EndqaL37dtb4bP3H/g9uejLz6LuT/Fr+3ZFd5ssWHs7meg\nUuPr89kbMBpjTGecP7ekaz93ssdzfJzgqcf5eQYneMPKeNuQ/Zh7duPaQwP8edsq3amJiFNU1ETE\nKSpqIuIUFTURcYqKmog4paXdz9G33or5h2rcifzqg1+3sh88/DNcGwlyd+mBd92N+S233oQ5Gd3L\nHcf1bBbzCxP8fCZmVq2sLc1vwehh7kYN9KcxN+YopoGGPc9Ym+Z5y8UoX0txGx+pV7/GRx7O5Oyu\nqC/FRwF6GR3gzlgobL+GjWs8VzkT8jh+sGsc87Fx7kTG23i2koTG+LUNVfk17O7k2c9C3e5aR/18\nD5Ku82ciE+KjAMnw7fx61z063JcuPI352VO/xHz7BbuLerCdn8+e/dz53irdqYmIU1TURMQpKmoi\n4hQVNRFxioqaiDilpd3PhVWeI3vjP30H5hPrdvfqoS98C9f+6PFnMG/US5jf/8F/jDlZ2eQu38Vz\nVzEfH+fu2sSFs1Y2OjaIa4cz3I3qTNi7yv464YrduYsVPI5PDPPsY9u5RcyLUZ6h7Oy2O2a1tU6P\nK2Szd/BHs/esvSvqlZo9V2iMMXs3uFMeuPcg5jeXuMu5NwWvy188jGtH7uHPckcfz/juDvLr0kjZ\n84+VZZ6rjMzx+1PK8kwoWfE4krfnngOY7z9/J+bnZk9j/sK5k1ZWaNidbGOMGdzP7yf3uG26UxMR\np6ioiYhTVNRExCkqaiLilJY2Cn7w17/A/CMffw/m73r/O62sWQjj2jPP8M8+On0F8/STj2NOlmc5\nv3zNPvLOGGPmF3lMqifdZ2U3H34Drh27hTfUnF+a44vxsCdtH5NW2uBjA5MX+Av0fBdv8BgKvop5\nIAejWVH+AtnL9Nd448fFXXbzaDDAzaA97XycYscxHit6x/288eMi9re4UfDTl1/EPJHgX7VyiDfs\nDCbarGxtiRs5fX5uwOWneVNJ8ugZ/pC/8508Injr796FedBw82zt5BNW9tT8RVzbed7eTNUYY+zD\nHpnu1ETEKSpqIuIUFTURcYqKmog4RUVNRJzS0u7n1MQFzI8++wrmd951g5Xdd//duLaZ4CPlVp7j\nDuWZGe5QkuMvcedu7iqPebQnIph33mg/n/37bsa1m3l+a44fm8TcSwRGZaoxuwtrjDFBP4/yNKrc\nFWymeJwlWrLHeTby13fs2UCUh2LapoatrONGvg5/4BTm/Rn+2d8/MYJ5T/wS5qQwxaNM6xHuUM7k\nuMtbjsDRhgU+knHDZ681xphUhDd4JJcu8RGLU5O7MA938Ws4etebMD9XK1jZ9CaPcZ29yGOJW6U7\nNRFxiorhf0kkAAAERUlEQVSaiDhFRU1EnKKiJiJOUVETEae0tPvpq/Es2vNHeBax1LQ7lHtu3o9r\nbzjIs5K5bu46zZ7l+TKykOWZu0wvb/DXv5OP+Dqwr9vK9t3IGy2efOYY5qdf5Q0BveyP2p2xuQsv\n4Nr5CB8beMeq3bkyxpijzRTmIwH7Gk+YMa9LROE8/731HbY7esuFSVzbW+W5ynyF54RPDXMn+t7T\nlzEn772P3894L3d/p69x196k7OdZzvOMa2aV54F9GzwnTT3hjSJfx7lxngnd0cWbSh7Yx+/zQKc9\nyxru5o1QX5zgz+dW6U5NRJyioiYiTlFRExGnqKiJiFNU1ETEKb5mk7sYv5EH83mcwyUi8rdoNpse\nZzv+Kt2piYhTVNRExCkqaiLiFBU1EXFKS8ekToz+HuY3N+OYZ+MxK+sph3Dt6SpvlDde4I3y/u8i\nj/78WfnPrOwjX+BNAmsefxKWrvEoUyxgj600izw6ltnGo1bRcAXzr/37PXwxIr9ldKcmIk5RURMR\np6ioiYhTVNRExCkqaiLilJZ2P/t3ljEvGD4qa+niTis7X+ZJq9NZPt7t0iY/xWxz60/91AsnMS/U\nuXN5+bLHkWohu0ObCPB1ZHrtDSWNMaa7jzdmFJG/oTs1EXGKipqIOEVFTUScoqImIk5RURMRp7S0\n+7nUncY8lwtgPhO186UV/tnj/iTm87t5rnQ91ME/6KwdvXGMO46xhH3slzHG1A51YR5ot+dWfR5/\nVlJNPlKtWuXZ15f4x4j81tGdmog4RUVNRJyioiYiTlFRExGnqKiJiFNa2v08ssGdyOrEAuZLsJnt\nbIQ7jok+fsxgmmdFIybP/wO4/85RzAd6I5inBzOYx9vsJ1Qq8VuQWy5iXs6uYv6fMRX57aM7NRFx\nioqaiDhFRU1EnKKiJiJOUVETEae0tPs5GeIzONcz3EUs1HxW1t7JncWplMeOsF08K7ma5msxz9nR\nkB8GQo0xyQ3ebTewyD+7UrbnOZMV7nI2q5uY58v6OyTy6+g3REScoqImIk5RURMRp6ioiYhTWtoo\n+NHFHObpBtdWOoCusslfrNcyvNHk+lU+xq4SmMacxDcW+T+slTCuLocxD9TsMal1jz8r8YDdJDHG\nmHiyh/8HETHG6E5NRByjoiYiTlFRExGnqKiJiFNU1ETEKS3tfs5feATzyrZBzGOhbisLDW3g2nQH\njya1xbluB4cxNlnIiksTuHYzu4Z5ocod10LBHn3yB3njzFia8/Yuj06siBhjdKcmIo5RURMRp6io\niYhTVNRExCkqaiLiFF+zyUfIiYj8Q6Q7NRFxioqaiDhFRU1EnKKiJiJOUVETEaeoqImIU1TURMQp\nKmoi4hQVNRFxioqaiDhFRU1EnKKiJiJOUVETEaeoqImIU1TURMQpKmoi4hQVNRFxioqaiDhFRU1E\nnKKiJiJOUVETEaeoqImIU1TURMQp/w9lF35h6J00GQAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10a4f66d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from cs231n.vis_utils import visualize_grid\n",
     "\n",
@@ -898,9 +909,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before spatial batch normalization:\n",
+      "  Shape:  (2, 3, 4, 5)\n",
+      "  Means:  [ 8.79623429  9.55707148  9.67594681]\n",
+      "  Stds:  [ 3.70563628  3.26804151  4.64996721]\n",
+      "After spatial batch normalization:\n",
+      "  Shape:  (2, 3, 4, 5)\n",
+      "  Means:  [ -1.37737044e-16  -1.69309011e-16   8.45157277e-16]\n",
+      "  Stds:  [ 0.99999964  0.99999953  0.99999977]\n",
+      "After spatial batch normalization (nontrivial gamma, beta):\n",
+      "  Shape:  (2, 3, 4, 5)\n",
+      "  Means:  [ 6.  7.  8.]\n",
+      "  Stds:  [ 2.99999891  3.99999813  4.99999884]\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the training-time forward pass by checking means and variances\n",
     "# of features both before and after spatial batch normalization\n",
@@ -933,9 +963,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After spatial batch normalization (test-time):\n",
+      "  means:  [ 0.00102294  0.01754262  0.01715759  0.04245422]\n",
+      "  stds:  [ 1.01008954  0.97085576  1.03549766  1.01436314]\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the test-time forward pass by running the training-time\n",
     "# forward pass many times to warm up the running averages, and then\n",
@@ -971,9 +1011,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx error:  2.27702074287e-07\n",
+      "dgamma error:  5.65094659191e-12\n",
+      "dbeta error:  7.7511689725e-12\n"
+     ]
+    }
+   ],
    "source": [
     "N, C, H, W = 2, 3, 4, 5\n",
     "x = 5 * np.random.randn(N, C, H, W) + 12\n",
